@@ -131,7 +131,8 @@ install-plugins:
 	-cd examples && $GIMPTOOL2 --install-admin-bin PDB
 	-cd examples && $GIMPTOOL2 --install-admin-bin alpha2color.pl
 	-cd examples && $GIMPTOOL2 --install-admin-bin tex-to-float
-#	-cd examples && $GIMPTOOL2 --install-admin-bin border.pl
+	-cd examples && $GIMPTOOL2 --install-admin-bin ditherize
+	-cd examples && $GIMPTOOL2 --install-admin-bin border.pl
 EOF
 }
 
